# class-timetabler

./: README.md  dev.sh
backend/: pyproject.toml  requirements.txt  start.sh  test_solver.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  school.py
backend/app/services/: __init__.py  data_loader.py
backend/app/solvers/: __init__.py  timetable_solver.py  validator.py
backend/data/: sample_school.json
backend/tests/: __init__.py
frontend/: package-lock.json  package.json  start.sh
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts  timetable.ts
frontend/src/components/: ConfirmMoveDialog.tsx  ConflictDialog.tsx  ErrorHandling.tsx  Icons.tsx  MasterView.tsx  RoomSelectionDialog.tsx  Sidebar.tsx  TimetableGrid.tsx  index.ts
